<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/label_home"
        android:enabled="true"/>
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/label_search"
        android:enabled="true"/>
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/label_favorite"
        android:enabled="true"/>

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/label_setting"
        android:enabled="true" />
</menu>