<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <ProgressBar
        android:id="@+id/homeProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        android:translationZ="90dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="14sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_active_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView1"
        android:layout_marginTop="30dp"
        android:textSize="14sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeActiveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="-"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/homeTextView2"
        app:layout_constraintStart_toStartOf="@+id/homeTextView2"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/home_active_org"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/homeTextView2"
        app:layout_constraintStart_toStartOf="@+id/homeTextView2"
        app:layout_constraintTop_toBottomOf="@+id/homeActiveUser" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeActiveOrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="-"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/homeTextView3"
        app:layout_constraintStart_toStartOf="@+id/homeTextView3"
        app:layout_constraintTop_toBottomOf="@+id/homeTextView3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/homeTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/home_top_most_followers"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/homeTextView2"
        app:layout_constraintStart_toStartOf="@+id/homeTextView2"
        app:layout_constraintTop_toBottomOf="@+id/homeActiveOrg" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/homeTextView4"
        app:layout_constraintStart_toStartOf="@id/homeTextView4"
        app:layout_constraintTop_toBottomOf="@id/homeTextView4">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/homeTopFollowers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="-" />

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>